main.tf
resource "aws_security_group" "sg" {
    name        = "${var.instance_name}-sg"
    description = "Security group for EC2 instance"
    vpc_id = var.vpc_id

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = var.environment == "prod" ? [var.vpc_cidr] : ["0.0.0.0/0"]
    }
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

}










resource "aws_instance" "ec2" {
    ami = var.ami_id
    instance_type = var.instance_type
    key_name = var.key_name
    subnet_id               = var.subnet_id
    vpc_security_group_ids = [aws_security_group.sg.id]
    disable_api_termination = var.environment == "prod" ? true : false

    tags = {
        Name = var.instance_name
    }
  
}
